[project]
name = "logtrack"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-unfold>=0.94.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "responses>=0.26.1",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "logtrack.settings"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
